--- a/index.html
+++ b/index.html
@@ -285,6 +285,10 @@
                                 <td><input name="shield_damage" type="number" min="0" max="50" step="1" ng-model="shieldDamage" ng-change="updateAttackData()" /></td>
                             </tr>
                             <tr>
+                                <td>Shieldstun Multiplier</td>
+                                <td><input name="shieldstun_mult" type="number" min="0" max="10" step="0.01" ng-model="shieldstunMult" ng-change="updateAttackData()" /></td>
+                            </tr>
+                            <tr>
                                 <td>Effect</td>
                                 <td>
                                     <select id="effect" ng-model="effect" ng-change="updateEffect()">
@@ -311,7 +315,7 @@
                             <input type="radio" ng-model="use_landing_lag" value="no" ng-change="update_faf()" /> Use move FAF
                             <br />
                             <input type="radio" ng-model="use_landing_lag" value="yes" ng-change="update_faf()" /> Use move landing lag
-                            <input name="landing_lag" type="number" ng-model="landing_lag" value="1" min="1" max="100" step="1" ng-change="update_landing_lag()" />
+                            <input name="landing_lag" type="number" ng-model="landing_lag" min="1" max="100" step="1" ng-change="update_landing_lag()" />
                             <br />
                             <input type="radio" ng-model="use_landing_lag" value="autocancel" ng-change="update_faf()" /> Use move autocancel
                         </span>
