Aerial move checkbox
This allows editing aerial moves damage without removing shieldstun multiplier, also chargeable specials being considered smash attacks on shieldstun fixed

--- a/kocalc.html
+++ b/kocalc.html
@@ -330,6 +330,8 @@
                                 <br />
                             </span>
                         </span>
+                        <input type="checkbox" ng-model="is_aerial_move" ng-change="updateAttackData()" /> Aerial move
+                        <br />
                         <span ng-style="is_aerial">
                             <input type="checkbox" ng-model="shorthop_aerial" ng-change="update()" /> Short hop aerial
                             <br />
