WBKB renamed to FKB
Also added Fox and Squirtle move data from Ultimate

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                                 <td><input name="bkb" type="number" min="0" max="999" step="1" ng-model="bkb" ng-change="updateAttackData()" /></td>
                             </tr>
                             <tr>
-                                <td>WBKB</td>
+                                <td>FKB</td>
                                 <td><input name="wbkb" type="number" min="0" max="999" step="1" ng-model="wbkb" ng-change="updateAttackData()" /></td>
                             </tr>
                             <tr>
@@ -285,7 +285,7 @@
                                 <td><input name="shield_damage" type="number" min="0" max="50" step="1" ng-model="shieldDamage" ng-change="updateAttackData()" /></td>
                             </tr>
                             <tr>
-                                <td>Shieldstun Multiplier</td>
+                                <td>Shieldstun</td>
                                 <td><input name="shieldstun_mult" type="number" min="0" max="10" step="0.01" ng-model="shieldstunMult" ng-change="updateAttackData()" /></td>
                             </tr>
                             <tr>
