--- a/percentcalc.html
+++ b/percentcalc.html
@@ -283,7 +283,7 @@
                                 <td><input name="bkb" type="number" min="0" max="999" step="1" ng-model="bkb" ng-change="updateAttackData()" /></td>
                             </tr>
                             <tr>
-                                <td>WBKB</td>
+                                <td>FKB</td>
                                 <td><input name="wbkb" type="number" min="0" max="999" step="1" ng-model="wbkb" ng-change="updateAttackData()" /></td>
                             </tr>
                             <tr>
