Check if collisions are techable

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                         <a href="https://github.com/rubendal/SSBU-Calculator/wiki" target="_blank" class="hide-link" title="Wiki">
                             <img class="header-link-icon invert" src="./img/icon.png" />
                         </a>
+                        <a href="https://ko-fi.com/rubendal" target="_blank" class="hide-link" title="Donate">
+                            <img class="header-link-icon" src="./img/kofi.png" />
+                        </a>
                         <a href="https://github.com/rubendal" target="_blank" class="hide-link" title="Github">
                             <img id="github-profile" class="header-link-icon2" src="https://avatars.githubusercontent.com/u/10661132?v=3" />
                         </a>
@@ -855,7 +858,7 @@
                             <input type="checkbox" name="inverseX" ng-model="inverseX" ng-change="updateDI()" /> Target hit from right side
                         </div>
                         <br />
-                        Display <input name="extra_frames" type="number" min="0" max="50" step="1" ng-model="extra_vis_frames" ng-change="update()" style="width:3em;" /> additional actionable frames
+                        Display <input name="extra_frames" type="number" min="0" max="99" step="1" ng-model="extra_vis_frames" ng-change="update()" style="width:3em;" /> additional actionable frames
                         
                         <br />
                         <br />
