--- a/percentcalc.html
+++ b/percentcalc.html
@@ -65,6 +65,9 @@
                         <a href="https://github.com/rubendal/SSBU-Calculator/wiki" target="_blank" class="hide-link" title="Wiki">
                             <img class="header-link-icon invert" src="./img/icon.png" />
                         </a>
+                        <a href="https://ko-fi.com/rubendal" target="_blank" class="hide-link" title="Donate">
+                            <img class="header-link-icon" src="./img/kofi.png" />
+                        </a>
                         <a href="https://github.com/rubendal" target="_blank" class="hide-link" title="Github">
                             <img id="github-profile" class="header-link-icon2" src="https://avatars.githubusercontent.com/u/10661132?v=3" />
                         </a>
