--- a/kocalc.html
+++ b/kocalc.html
@@ -245,7 +245,7 @@
                         </select>
                         <span ng-hide="moveset_info == null">{{moveset_info}}</span>
                         <br />
-                        <a class="select-link" href="http://kuroganehammer.com/Smash4/{{encodedAttackerValue}}" target="_blank">{{attackerName}} frame data</a>
+                        <a class="select-link" href="http://kuroganehammer.com/Ultimate/{{encodedAttackerValue}}" target="_blank">{{attackerName}} frame data</a>
                         <br />
                         <div ng-style="counterStyle">
                             Countered Damage
