Meta Knight move data

--- a/percentcalc.html
+++ b/percentcalc.html
@@ -172,8 +172,8 @@
                                 <!--<img ng-src="{{target_icon}}" class="stock-icon" />-->
                                 <span class="character-image-cont"><img ng-src="{{target_image}}" class="character-image" ng-class="target_class" /></span>
                                 <div class="percent-div">
-                                    <input name="target_percent" type="number" class="percent-input" min="0" max="999" step="0.1" ng-model="targetPercent" ng-style="targetPercent_style" ng-change="updatePercent()" />
-                                    <span ng-style="targetPercent_style">%</span>
+                                    <!--<input name="target_percent" type="number" class="percent-input" min="0" max="999" step="0.1" ng-model="targetPercent" ng-style="targetPercent_style" ng-change="updatePercent()" />
+                                    <span ng-style="targetPercent_style">%</span>-->
                                 </div>
                                 <div class="character-select-container" ng-class="target_class">
                                     <select name="targetSelect" class="character-select" ng-model="targetValue" ng-change="updateTarget()">
