--- a/kocalc.html
+++ b/kocalc.html
@@ -143,7 +143,7 @@
                             <div class="char-select">
                                 <!--<img ng-src="{{target_icon}}" class="stock-icon" />-->
                                 <span class="character-image-cont"><img ng-src="{{target_image}}" class="character-image" ng-class="target_class" /></span>
-                                <div class="percent-div">
+                                <div class="percent-div" style="visibility:hidden;">
                                     <input name="target_percent" type="number" class="percent-input" min="0" max="999" step="0.1" ng-model="targetPercent" ng-style="targetPercent_style" ng-change="updatePercent()" />
                                     <span ng-style="targetPercent_style">%</span>
                                 </div>
