DamageFlySpeedUp launch visualization adjustments

--- a/kocalc.html
+++ b/kocalc.html
@@ -442,12 +442,12 @@
             <!-- Modifiers end -->
             <!-- Share -->
 
-            <a class="select-link cur-link" ng-click="collapse('sharing')">
+            <a class="select-link cur-link" ng-click="collapse('genlink')">
                 <div class="card header-group slink-header">
                     <span class="cur-link header-group-text">Share</span>
                 </div>
             </a>
-            <div id="sharing" class="card-block collapse group">
+            <div id="genlink" class="card-block collapse group">
                 Copy this URL <input id="shareurl" readonly type="text" ng-model="sharing_url" onclick="this.select();" />
             </div>
 
