Remove Finishing Touch option
Finishing Touch isn't set weight nor has special gravity/fall speed in this game

--- a/kocalc.html
+++ b/kocalc.html
@@ -357,8 +357,10 @@
                         <br />
                         <input type="checkbox" name="set_weight" ng-model="set_weight" ng-change="update()" /> Set weight
                         <br />
-                        <input type="checkbox" name="isFinishingTouch" ng-model="isFinishingTouch" ng-change="update()" /> Finishing Touch
-                        <br />
+                        <!--<br />
+    <input type="checkbox" name="isFinishingTouch" ng-model="isFinishingTouch"
+        ng-change="update()" /> Finishing Touch
+        -->
 
                     </div>
                 </div>
