--- a/index.html
+++ b/index.html
@@ -311,48 +311,73 @@
                         <table>
                             <tr>
                                 <td>Damage</td>
-                                <td><input name="base_damage" type="number" min="0" max="999" step="0.1"
-                                        ng-model="baseDamage" ng-change="updateAttackData()" /></td>
+                                <td>
+                                    <input name="base_damage" type="number" min="0" max="999" step="0.1"
+                                           ng-model="baseDamage" ng-change="updateAttackData()" />
+                                </td>
                             </tr>
                             <tr ng-style="is_smash_visibility">
                                 <td>{{charging_frames_type}}</td>
-                                <td><input name="charge" type="number" min="{{charge_min}}" max="{{charge_max}}"
-                                        step="1" ng-model="smashCharge" ng-change="updateCharge()" /></td>
+                                <td>
+                                    <input name="charge" type="number" min="{{charge_min}}" max="{{charge_max}}"
+                                           step="1" ng-model="smashCharge" ng-change="updateCharge()" />
+                                </td>
                             </tr>
                             <tr>
                                 <td>Hitlag</td>
-                                <td><input name="hitlag_multiplier" type="number" min="0" max="6" step="0.05"
-                                        ng-model="hitlag" ng-change="update()" /></td>
+                                <td>
+                                    <input name="hitlag_multiplier" type="number" min="0" max="6" step="0.05"
+                                           ng-model="hitlag" ng-change="update()" />
+                                </td>
                             </tr>
                             <tr>
                                 <td>Angle</td>
-                                <td><input name="angle" type="number" min="0" max="367" step="1" ng-model="angle"
-                                        ng-change="updateAttackData()" /></td>
+                                <td>
+                                    <input name="angle" type="number" min="0" max="367" step="1" ng-model="angle"
+                                           ng-change="updateAttackData()" />
+                                </td>
                             </tr>
                             <tr>
                                 <td>BKB</td>
-                                <td><input name="bkb" type="number" min="0" max="999" step="1" ng-model="bkb"
-                                        ng-change="updateAttackData()" /></td>
+                                <td>
+                                    <input name="bkb" type="number" min="0" max="999" step="1" ng-model="bkb"
+                                           ng-change="updateAttackData()" />
+                                </td>
                             </tr>
                             <tr>
                                 <td>FKB</td>
-                                <td><input name="wbkb" type="number" min="0" max="999" step="1" ng-model="wbkb"
-                                        ng-change="updateAttackData()" /></td>
+                                <td>
+                                    <input name="wbkb" type="number" min="0" max="999" step="1" ng-model="wbkb"
+                                           ng-change="updateAttackData()" />
+                                </td>
                             </tr>
                             <tr>
                                 <td>KBG</td>
-                                <td><input name="kbg" type="number" min="0" max="999" step="1" ng-model="kbg"
-                                        ng-change="updateAttackData()" /></td>
+                                <td>
+                                    <input name="kbg" type="number" min="0" max="999" step="1" ng-model="kbg"
+                                           ng-change="updateAttackData()" />
+                                </td>
                             </tr>
                             <tr>
                                 <td>Shield Damage</td>
-                                <td><input name="shield_damage" type="number" min="-50" max="50" step="1"
-                                        ng-model="shieldDamage" ng-change="updateAttackData()" /></td>
+                                <td>
+                                    <input name="shield_damage" type="number" min="-50" max="50" step="1"
+                                           ng-model="shieldDamage" ng-change="updateAttackData()" />
+                                </td>
                             </tr>
                             <tr>
                                 <td>Shield stun</td>
-                                <td><input name="shieldstun_mult" type="number" min="0" max="10" step="0.01"
-                                        ng-model="shieldstunMult" ng-change="updateAttackData()" /></td>
+                                <td>
+                                    <input name="shieldstun_mult" type="number" min="0" max="10" step="0.01"
+                                           ng-model="shieldstunMult" ng-change="updateAttackData()" />
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Add. Hitstun</td>
+                                <td>
+                                    <input name="add_hitstun" type="number" min="-100" max="100" step="1"
+                                           ng-model="addHitstun" ng-change="updateAttackData()" />
+                                </td>
                             </tr>
                             <tr>
                                 <td>Effect</td>
@@ -364,8 +389,10 @@
                             </tr>
                             <tr>
                                 <td>Hit frame</td>
-                                <td><input name="hit_frame" type="number" min="0" max="1000" step="1"
-                                        ng-model="hit_frame" ng-change="update()" /></td>
+                                <td>
+                                    <input name="hit_frame" type="number" min="0" max="1000" step="1"
+                                           ng-model="hit_frame" ng-change="update()" />
+                                </td>
                                 <td>
                                     <span>
                                         <button ng-style="prev_hf" ng-click="prev_hit_frame()">&lt;</button>
@@ -375,8 +402,10 @@
                             </tr>
                             <tr>
                                 <td>{{use_landing_lag == "no" ? "FAF" : "Landing frame"}}</td>
-                                <td><input name="faf" type="number" min="0" max="1000" step="1" ng-model="faf"
-                                        ng-change="update()" /></td>
+                                <td>
+                                    <input name="faf" type="number" min="0" max="1000" step="1" ng-model="faf"
+                                           ng-change="update()" />
+                                </td>
                             </tr>
                         </table>
                         <span ng-style="is_aerial">
