--- a/kocalc.html
+++ b/kocalc.html
@@ -1,17 +1,16 @@
 ﻿<!DOCTYPE html>
 <html>
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# object: http://ogp.me/ns/object# article: http://ogp.me/ns/article# profile: http://ogp.me/ns/profile#">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-81804817-2"></script>
     <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-        ga('create', 'UA-81804817-2', 'auto');
-        ga('send', 'pageview');
+        gtag('config', 'UA-81804817-2');
     </script>
+
     <script src="js/formulas.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="js/visualizer.js"></script>
@@ -28,15 +27,15 @@
     <title>Smash Ultimate Calculator</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=0.5" />
-    <meta name="description" content="Smash Ultimate knockback calculator" />
+    <meta name="description" content="Smash Ultimate KO % calculator" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@Ruben_dal" />
     <meta name="twitter:title" content="Smash Ultimate Calculator" />
-    <meta name="twitter:description" content="Smash Ultimate knockback calculator" />
+    <meta name="twitter:description" content="Smash Ultimate KO % calculator" />
     <meta name="twitter:image:src" content="https://raw.githubusercontent.com/rubendal/SSBU-Calculator/gh-pages/img/m-icon.png" />
     <meta property="og:title" content="Smash Ultimate Calculator" />
     <meta property="og:image" content="https://raw.githubusercontent.com/rubendal/SSBU-Calculator/gh-pages/img/m-icon.png" />
-    <meta property="og:description" content="Smash Ultimate knockback calculator" />
+    <meta property="og:description" content="Smash Ultimate KO % calculator" />
 </head>
 <body ng-app="calculator" ng-controller="calculator">
 
