Web worker bug fixes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="header-cont">
             <img id="header-icon" class="header-image invert" src="./img/icon.png" />
             <div id="header-text">
-                <a class="hide-link" href="https://github.com/rubendal/SSBU-Calculator" target="_blank">
+                <a class="hide-link" href="https://github.com/rubendal/SSBU-Calculator" target="_blank" rel="noopener">
                     <h3>Smash Ultimate Calculator</h3>
                 </a>
                 <br />
@@ -67,22 +67,22 @@
             <div id="header-right">
                 <span id="links">
                     <span>
-                        <a href="https://rubendal.github.io/Sm4sh-Calculator/" target="_blank" class="hide-link"
+                        <a href="https://rubendal.github.io/Sm4sh-Calculator/" target="_blank" rel="noopener" class="hide-link"
                             title="Smash 4 Calculator">
                             <img class="header-link-icon" src="./img/smash4-icon.png" />
                         </a>
-                        <a href="https://twitter.com/Ruben_dal" target="_blank" class="hide-link"
+                        <a href="https://twitter.com/Ruben_dal" target="_blank" rel="noopener" class="hide-link"
                             title="Twitter @Ruben_dal">
                             <img class="header-link-icon" src="./img/t-icon.png" />
                         </a>
-                        <a href="https://github.com/rubendal/SSBU-Calculator/wiki" target="_blank" class="hide-link"
+                        <a href="https://github.com/rubendal/SSBU-Calculator/wiki" target="_blank" rel="noopener" class="hide-link"
                             title="Wiki">
                             <img class="header-link-icon invert" src="./img/icon.png" />
                         </a>
-                        <a href="https://ko-fi.com/rubendal" target="_blank" class="hide-link" title="Donate">
+                        <a href="https://ko-fi.com/rubendal" target="_blank" rel="noopener" class="hide-link" title="Donate">
                             <img class="header-link-icon" src="./img/kofi.png" />
                         </a>
-                        <a href="https://github.com/rubendal" target="_blank" class="hide-link" title="Github">
+                        <a href="https://github.com/rubendal" target="_blank" rel="noopener" class="hide-link" title="Github">
                             <img id="github-profile" class="header-link-icon2"
                                 src="https://avatars.githubusercontent.com/u/10661132?v=3" />
                         </a>
@@ -95,7 +95,7 @@
         </select>
     </span>-->
                 <!--<span style="clear: right;float: right;margin-right: 20px;margin-top: 50px;line-height:0px;font-size:14px;">
-                    <a class="hide-link" target="_blank" href="https://github.com/rubendal/SSBU-Calculator#readme">Read this before using app</a>
+                    <a class="hide-link" target="_blank" rel="noopener" href="https://github.com/rubendal/SSBU-Calculator#readme">Read this before using app</a>
                 </span>-->
             </div>
 
@@ -332,7 +332,7 @@
                         <span ng-hide="moveset_info == null">{{moveset_info}}</span>
                         <br />
                         <a class="select-link" href="http://kuroganehammer.com/Ultimate/{{encodedAttackerValue}}"
-                           target="_blank">{{attackerName}} frame data</a>
+                           target="_blank" rel="noopener">{{attackerName}}&nbsp;frame data</a>
                         <br />
                         <div ng-style="counterStyle">
                             Countered Damage
