Bury, Sleep and Disable formulas updated with stock difference
Also updated Disable formula with Ultimate params

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                 </select>
                                 <br />
                             </div>
-                            <div ng-style="is_lucario" class="auraParam">
+                            <div class="auraParam">
                                 Stock difference
                                 <select ng-model="stock_dif" ng-change="update()">
                                     <option ng:repeat="value in stock_values" ng-attr-value="{{value}}">
