--- a/percentcalc.html
+++ b/percentcalc.html
@@ -225,8 +225,8 @@
                 <div class="pos-right pos-attr">
                     <table>
                         <!--<tr>
-                        <td>Target</td>
-                    </tr>-->
+        <td>Target</td>
+    </tr>-->
                         <tr>
                             <td>Damage taken</td>
                             <td>x <input name="target_damage_taken" type="number" min="0" max="100" step="0.01" ng-model="target_damage_taken" ng-change="updateAttr()" /></td>
@@ -238,6 +238,14 @@
                         <tr>
                             <td>Weight</td>
                             <td>&nbsp;&nbsp;&nbsp;<input name="target_weight" type="number" min="0" max="999" step="1" ng-model="target_weight" ng-change="updateAttr()" /></td>
+                        </tr>
+                        <tr></tr>
+                        <tr>
+                            <td>Ink</td>
+                            <td>
+                                &nbsp;&nbsp;&nbsp;<input name="ink_value" type="number" min="0" max="300"
+                                                         step="0.01" ng-model="inkValue" ng-change="updateAttr()" />
+                            </td>
                         </tr>
                     </table>
                 </div>
