Character scripts on Data Viewer link

--- a/index.html
+++ b/index.html
@@ -342,6 +342,9 @@
                         <a class="select-link" href="http://kuroganehammer.com/Ultimate/{{encodedAttackerValue}}"
                            target="_blank" rel="noopener">{{attackerName}}&nbsp;frame data</a>
                         <br />
+                        <a class="select-link" href="https://rubendal.github.io/ssbu/#/Character/{{dataViewerAttackerValue}}"
+                           target="_blank" rel="noopener">{{attackerName}}&nbsp;scripts</a>
+                        <br />
                         <div ng-style="counterStyle">
                             Countered Damage
                             <input name="countered_base_damage" type="number" min="0" max="999" step="0.1"
