Changed wiki link to new documentation site, added Byleth image

--- a/kocalc.html
+++ b/kocalc.html
@@ -63,7 +63,8 @@
                         <a href="https://twitter.com/Ruben_dal" target="_blank" rel="noopener" class="hide-link" title="Twitter @Ruben_dal">
                             <img class="header-link-icon" src="./img/t-icon.png" />
                         </a>
-                        <a href="https://github.com/rubendal/SSBU-Calculator/wiki" target="_blank" rel="noopener" class="hide-link" title="Wiki">
+                        <a href="https://rubendal.github.io/SmashDocs/" target="_blank" rel="noopener" class="hide-link"
+                           title="Documentation">
                             <img class="header-link-icon invert" src="./img/icon.png" />
                         </a>
                         <a href="https://ko-fi.com/rubendal" target="_blank" rel="noopener" class="hide-link" title="Donate">
