--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                             title="Twitter @Ruben_dal">
                             <img class="header-link-icon" src="./img/t-icon.png" />
                         </a>
-                        <a href="https://github.com/rubendal/SSBU-Calculator/wiki" target="_blank" rel="noopener" class="hide-link"
-                            title="Wiki">
+                        <a href="https://rubendal.github.io/SmashDocs/" target="_blank" rel="noopener" class="hide-link"
+                            title="Documentation">
                             <img class="header-link-icon invert" src="./img/icon.png" />
                         </a>
                         <a href="https://ko-fi.com/rubendal" target="_blank" rel="noopener" class="hide-link" title="Donate">
